--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="result"></div>
       <div>
         <button class="clear">Clear</button>
-        <button class="delete">Delete</button>
+        <button class="delete">del</button>
       </div>
       <div>
         <button class="7">7</button>
